syntax = "proto3";

option go_package = "washambi-lib/rpc/blazerxd/v1";

package blazerxd.v1;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

service Blazerxd {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);

  // todo: UserDelete
  // rpc UserPurge(UserPurgeRequest) returns (google.protobuf.Empty);
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string recoveryPrompt1 = 4;
  string recoveryPrompt2 = 5;
  string recoveryPrompt3 = 6;
  string recoveryAnswer1 = 7;
  string recoveryAnswer2 = 8;
  string recoveryAnswer3 = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp deleted_at = 12;
}

// create
message CreateRequest {
  string username = 1;
  string password = 2;
  string recoveryPrompt1 = 3;
  string recoveryPrompt2 = 4;
  string recoveryPrompt3 = 5;
  string recoveryAnswer1 = 6;
  string recoveryAnswer2 = 7;
  string recoveryAnswer3 = 8;
}

message CreateResponse { User user = 1; }

// get
message GetRequest { string username = 1; }
message GetResponse { User user = 1; }

// change password
message ChangePasswordRequest {
  string id = 1;
  string password = 2;
}

message ChangePasswordResponse { User user = 1; }

